--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@next/font": "13.4.16",
     "ethers": "^5.7.2",
-    "next": "13.4.16",
+    "next": "^13.5.6",
     "react": "18.2.0",
     "react-countdown": "^2.3.5",
     "react-dom": "18.2.0",
